updating URL to URI